--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -48,6 +48,7 @@
 			style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
 			Your web browser must have JavaScript enabled in order for this application to display correctly.</div>
 	</noscript>
+	<div class="test-wrapper">TESTING...</div>
 
 </body>
 </html>
