--- a/src/main/webapp/sandbox.html
+++ b/src/main/webapp/sandbox.html
@@ -16,6 +16,8 @@
 <!--                                                               -->
 <!-- Consider inlining CSS to reduce the number of requested files -->
 <!--                                                               -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
 <link type="text/css" rel="stylesheet" href="sandbox.css">
 
 <!--                                           -->
@@ -28,6 +30,7 @@
 <!-- If you add any GWT meta tags, they must   -->
 <!-- be added before this line.                -->
 <!--                                           -->
+<script src="https://kit.fontawesome.com/08fd72ed2b.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="IdfUxUiSandbox/IdfUxUiSandbox.nocache.js"></script>
 </head>
 
